Dropdown double scroll bars fix (#1685)
* add div & first-child fix

* adding scrollable content class

* naming

--- a/src/sass/objects/_dropdowns.container.scss
+++ b/src/sass/objects/_dropdowns.container.scss
@@ -34,6 +34,7 @@
 // <div class="xui-dropdown-layout xui-dropdown-small xui-dropdown-is-open xui-dropdown-is-opening">
 //   <div class="xui-dropdown--mask"></div>
 //   <div class="xui-dropdown--body">
+//		<div class="xui-dropdown--scrollable-content">
 //     <ul class="xui-picklist">
 //       <li class="xui-pickitem" tabindex="0">
 //         <button class="xui-pickitem--body" tabindex="-1">All Reports</button>
@@ -66,6 +67,7 @@
 //         <button class="xui-pickitem--body" tabindex="-1">GST Return</button>
 //       </li>
 //     </ul>
+//		</div>
 //		<div class="xui-dropdown--footer">
 //			<ul class="xui-picklist">
 //				<li class="xui-pickitem" aria-selected="false" tabindex="-1" role="option" id="footer1">
@@ -87,6 +89,7 @@
 // <div class="xui-dropdown-layout xui-u-fullwidth xui-dropdown-is-open xui-dropdown-is-opening">
 //   <div class="xui-dropdown--mask"></div>
 //   <div class="xui-dropdown--body">
+//		<div class="xui-dropdown--scrollable-content">
 //     <ul class="xui-picklist">
 //       <li class="xui-pickitem" tabindex="0">
 //         <button class="xui-pickitem--body" tabindex="-1">Monthly</button>
@@ -98,6 +101,7 @@
 //         <button class="xui-pickitem--body" tabindex="-1">Six-monthly</button>
 //       </li>
 //     </ul>
+//		</div>
 //   </div>
 // </div>
 //
@@ -134,7 +138,7 @@
 			width: 100vw;
 			z-index: inherit;
 
-			& :first-child {
+			.#{$ns}-dropdown--scrollable-content {
 				max-height: 80vh;
 			}
 		}
@@ -174,7 +178,7 @@
 		box-shadow: $xui-shadow-depth-2;
 	}
 
-	& :first-child {
+	.#{$ns}-dropdown--scrollable-content {
 		overflow-y: auto;
 	}
 }
